fix: remove row gap

--- a/packages/ocean-core/src/components/_chips.scss
+++ b/packages/ocean-core/src/components/_chips.scss
@@ -96,7 +96,6 @@
 
     &--content--columns-2 {
       display: grid;
-      grid-column-gap: 20px;
       grid-template-columns: repeat(2, 1fr);
       min-width: 296px;
       width: auto;
@@ -104,7 +103,6 @@
 
     &--content--columns-3 {
       display: grid;
-      grid-column-gap: 20px;
       grid-template-columns: repeat(3, 1fr);
       min-width: 436px;
       width: auto;
